# Fireside

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MODULE-REVIEW.md  Makefile  PHASE3_4_CHECKLIST.md  PHASE3_5_CHECKLIST.md  PHASE3_6_CHECKLIST.md  PHASE3_PLAN.md  PHASE3_SUMMARY.md  PLAN-CODEC.md  PLAN-EXECUTION.md  PLAN-NATIVE-MEDIASOUP-NEXT.md  PLAN-STREAMING.md  PLAN.md  QA.md  README.md  TOP5-REFACTOR-PLAN.md  VOICE-CHAT-REVIEW.md  docker-compose.prod.yml  makefile  plan-security.md  plan-settings.md  plan-step-2  ui-refactor.md
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  tauri-release.yml
.opencode/skills/frontend-design-ux/: SKILL.md
.opencode/skills/fullstack-feature-slice/: SKILL.md
.opencode/skills/media-upload-guardrails/: SKILL.md
.opencode/skills/tauri-bridge-sync/: SKILL.md
.opencode/skills/ws-contract-sync/: SKILL.md
.opencode/skills/yankcord-validation-matrix/: SKILL.md
22/52b1396837/: metadata.json
22/52b1396837/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
22/52b1396837/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
42/384bc05b2c/: metadata.json
42/384bc05b2c/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
42/384bc05b2c/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
4b/7331e12b0a/: metadata.json
4b/7331e12b0a/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
4b/7331e12b0a/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
4b/7331e12b0a/2/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
53/196a6ff0fb/: metadata.json
53/196a6ff0fb/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
53/196a6ff0fb/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
5a/155aaa83f4/: metadata.json
5a/155aaa83f4/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
95/5172faedf7/: metadata.json
95/5172faedf7/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
99/895eb8ce8a/: metadata.json
99/895eb8ce8a/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
client/: Caddyfile  Dockerfile.web  index.html  package-lock.json  package.json  vite.config.ts
client/public/sounds/: README.md
client/src/: App.tsx  index.tsx
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: capture_sources.rs  lib.rs  main.rs
client/src-tauri/src/capture/: dxgi_capture.rs  gpu_frame.rs  mod.rs  service.rs  windows_capture.rs  zed_scap_capture.rs
client/src-tauri/src/capture/dxgi_capture/: mod.rs  session.rs  target.rs  windows.rs
client/src-tauri/src/capture/service/: av1_encoder.rs  encoder_backend.rs  ffmpeg_backend.rs  ffmpeg_ivf_encoder.rs  h264_encoder.rs  metrics.rs  native_sender.rs  nvenc_encoder.rs  nvenc_sdk.rs  rtp_packetizer.rs  rtp_sender.rs  vp8_encoder.rs  vp9_encoder.rs  x264_encoder.rs
client/src-tauri/src/capture_v2/: capture_loop.rs  encoder.rs  metrics.rs  mod.rs  rtp_packetizer.rs  sender.rs  session.rs
docs/: deploy.md  native-codec-encoder-expansion.md  screen-sharing-implementation-plan.md  screen-sharing-pipeline-review.md  screen-sharing-v2-plan.md  zero-copy-nvenc.md
flutter-client/: .gitignore  analysis_options.yaml  pubspec.yaml
flutter-client/lib/: app.dart  main.dart
scripts/: bootstrap-ubuntu-vm.sh  build-latest-json.mjs  deploy-docker.sh  deploy-ovh.sh  prepare-tauri-updater-config.mjs  sync-client-version-from-tag.mjs
server/: .env.docker.example  .env.example  Cargo.toml  Dockerfile  Makefile  config.toml.example  docker-compose.yml
server/migrations/: 20260210000001_initial.sql  20260212000003_drop_server_tables.sql  20260212000004_remove_channel_server_id.sql  20260214000006_voice_channel_settings.sql  20260215000007_media_assets.sql  20260215000008_message_attachments.sql  20260216000001_initial.sql  20260216000002_emojis.sql  20260216000003_reactions.sql  20260216000004_phase2_performance.sql  20260216000005_phase54_profiles_dms.sql  20260216000006_dm_reactions.sql  20260222000007_channel_read_state.sql
server/src/: auth.rs  config.rs  errors.rs  main.rs  message_attachments.rs  models.rs  telemetry.rs
server/src/media/: consumer.rs  mod.rs  native_codec.rs  producer.rs  router.rs  transport.rs
server/src/routes/: auth_routes.rs  channel_routes.rs  dm_routes.rs  embed_routes.rs  emoji_routes.rs  gif_routes.rs  invite_routes.rs  media_routes.rs  mod.rs  reaction_routes.rs  server_routes.rs  settings_routes.rs  user_routes.rs
server/src/storage/: local.rs  mod.rs  s3.rs
server/src/uploads/: mod.rs
server/src/ws/: broadcast.rs  handler.rs  media_signal.rs  messages.rs  mod.rs  voice.rs
(+167 files in other folders)
