[package]
name = "yankcord-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
mediasoup = "0.20"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
jsonwebtoken = "9"
argon2 = "0.5"
password-hash = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
async-trait = "0.1"
hex = "0.4"
image = "0.25"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
scraper = "0.22"
url = "2"
