[package]
name = "client"
version = "0.1.17"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
native-nvenc = ["dep:nvidia-video-codec-sdk", "dep:cudarc"]
native-diagnostic-udp-mirror = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openh264 = "0.9.3"

[target.'cfg(target_os = "windows")'.dependencies]
dxgi-capture-rs = "1.2.1"
windows-capture = "1.5.0"
# Pinned: NvencSdkSession uses std::mem::transmute on Session/Buffer/Bitstream
# lifetimes. A crate update could change internal layout and cause UB.
nvidia-video-codec-sdk = { version = "=0.4.0", optional = true }
cudarc = { version = "0.16", optional = true, default-features = false, features = ["driver", "cuda-version-from-build-system"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
] }
